# software_arch

./: CMakeLists.txt  README.md  start.sh  start_consume.sh
config/: config.cpp  config.h
database/: PersonEntity.cpp  PersonEntity.h  initdb.sql
docker/: docker-compose.yaml
docker/mysql/: Dockerfile  init.sql
docker/proxysql/: Dockerfile  proxysql.cnf
src/: Server.cpp  Server.h
src/handlers/: Factory.cpp  Factory.h  PersonRequest.cpp  PersonRequest.h
src/writer/: SimplePocoHandler.cpp  amqp_consume.cpp
test/: test.json  test.sh
